@@ -41,8 +41,7 @@ namespace CIAO
     NodeApplication_Callback_Impl (CORBA::ORB_ptr o,
                                    PortableServer::POA_ptr p,
                                    Deployment::NodeApplicationManager_ptr s,
-                                   const Deployment::Properties &properties)
-      ACE_THROW_SPEC ((CORBA::SystemException));
+                                   const Deployment::Properties &properties);
 
     /// Get the containing POA.  This operation does *not* increase
     /// the reference count of the POA.
@@ -53,8 +52,7 @@ namespace CIAO
     /// NodeApplicationManager
     Deployment::NodeApplicationManager_ptr
     register_node_application (Deployment::NodeApplication_ptr na,
-                               Deployment::Properties_out properties)
-      ACE_THROW_SPEC ((CORBA::SystemException));
+                               Deployment::Properties_out properties);
 
     Deployment::NodeApplication_ptr get_nodeapp_ref (void);
 
